# horizon-rag

./: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt  test_gemini.py
chroma_db/: chroma.sqlite3
rag/: chatbot.py  config.py  loader.py  prompt.py  retriever.py  splitter.py  vectorstore.py
static/: app.js  style.css
templates/: index.html
