[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon-ai"
version = "0.1.0"
description = "Enterprise RAG System for Horizon Tours & Travel"
authors = [
    {name = "AI Engineer", email = "ai@horizontours.com"}
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "langchain>=0.1.7",
    "langchain-core>=0.1.23",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.24",
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.7.3",
    "sentence-transformers>=2.3.1",
    "pdfplumber>=0.10.4",
    "redis>=5.0.1",
    "langdetect>=1.0.9",
    "tiktoken>=0.5.2",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "flake8>=7.0.0"
]
